# FrameMind

./: .gitignore  Makefile  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.worker  docker-compose.yml
scripts/: download_models.py
src/: __init__.py
src/api/: __init__.py  deps.py  main.py  middleware.py
src/api/routes/: health.py  ingest.py  query.py
src/cache/: __init__.py  redis_cache.py
src/core/: __init__.py  config.py  exceptions.py  logging.py  models.py
src/ingest/: __init__.py  extractor.py  preprocessor.py  validator.py
src/ml/: __init__.py  clip_scorer.py  embeddings.py  frame_selector.py  parallel_encoder.py  shot_detector.py  temporal_encoder.py
src/storage/: __init__.py  base.py  local.py  metadata.py
src/vlm/: __init__.py  aggregator.py  client.py  prompt_builder.py
src/workers/: __init__.py  callbacks.py  orchestrator.py  pipeline.py
tests/: __init__.py  conftest.py
tests/unit/: test_parallel_encoder.py  test_shot_detector.py  test_temporal_encoder.py
